--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,7 @@ inhibit_all_warnings!
 pod 'Google/CloudMessaging'
 pod 'Reachability'
 pod 'AFNetworking'
+pod 'SSKeychain'
 
 target 'Nudgespot_Example', :exclusive => true do
   pod 'Nudgespot', :path => '../'
